baxter/themes/firefly/css/style.css
/* ... */
#recaptcha_area input {
  display: inline;
}

/* @end */







/* EMLO SPECIFIC */







/* General */

h1, h2, h3 {
		color: #35495E;
		font-family: "adelle",serif !important;
}

h1 { 
    text-transform: none;
}

/* Specifics */


#header-wrap {
	background-color: #EFC319;
    font-family: "adelle",serif;
    font-size: 1.3em;
    color: #35495E;
}

#header-wrap  a {
color: #35495E;
}

header {
	padding: 1em 0;
}
header[role=banner] {
    padding:0;
}

/* nav and search */

#query {
	border-radius: 30px;
	padding: 50px;
}

#search-container button {
	right: auto;
	left: 0;
}

#search-container input[type="text"] {
  padding: 3px 3px 3px 65px;
	border-radius: 30px;
}
#search-container button#submit_search {
	border-radius: 30px 0 0 30px;
}
#search-container.with-advanced .button {
	right: auto;
	left: 30px;
}

#search-container button {
    background: url("http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png") no-repeat scroll 9px
}
#search-container button::after {
    display:none;
}

#primary-nav {
    width: auto;
    margin-left: 150px; /* avoid logo */
}
#primary-nav a {
	background-color: #EFC319;
	padding: 0.75em 15px;
}

#primary-nav .nav-item > a {
	border-color: transparent;
  font-weight: bold;
}

#primary-nav a:hover, #primary-nav a:focus, #primary-nav li.active a {
	color: white;
}
#primary-nav .nav-item:first-child > a {
	border-left: none;
}
#search-container,
#primary-nav {
    display: inline-block;
}
#search-container {
    width: 23%;
    margin-top: 6px;
}

#primary-nav .navigation,
#primary-nav .nav_menu,
#primary-nav {
	z-index: initial;
}

/* logo and title */

#logo a {
    float:left;
    margin-top: -78px;
    margin-left: -20px;
    padding: 0px 15px;
}
#logo .text {
    /*display:none;*/
}

header .text {
    margin-left: 245px;
    color: #172854;
}
header .text p {
    font-size: 16px;
    line-height: 1.5;
    color: #222;
    margin: 0;
}
#site-title {
    font-family: "adelle",serif !important;
    font-size: 28px;
    text-transform: none;
    width: auto;
    letter-spacing: normal;
    float: none;
    line-height: 1.;
}
#site-title a,
#site-title a:visited {
    color: #172854;;
}

/* Content */
#home #secondary {
	border: 1px solid rgb(215, 215, 215); 
	background: rgb(238, 238, 238) none repeat scroll 0% 0%;
	padding-left: 0;

	max-height: 777px;
	overflow: hidden;
}

#secondary a {
    text-decoration: none;
    color: black;
}

#secondary h2 {
  margin-bottom:0;
}

#secondary h3 {
  color: #369;
  margin:0;
}


#home #secondary div {
	margin: 1.5em 20px;
}


#home #secondary img {
	width: 100%;
}

#content:focus {
    outline: 0;
}

.collections.show #content h1 {
    margin-bottom: 0;
}

.featured {
    border: solid 1px #D7D7D7;
		min-height: 380px;
}

.featured img, #featured-exhibit img,
.collection .image img, .exhibit .image img {
	height: auto;
}

#sort-links + .item,
#sort-links + .collection,
nav + .exhibit {
  border-top: 1px solid #EFC319;
}
#secondary-nav, .secondary-nav,
.browse .collection,
.browse .exhibit,
.browse .item,
.collections .item {
    border-bottom: 1px solid #EFC319
}

.collections.browse #sort-links,
.items.browse #sort-links {
	display:none;
}

.collections .item {
    border-top: 0;
    padding-bottom: 22px;
}

body.items.show .element-set h2,
body.collections.show .element-set h2 {
	display: none;	
}

.spliter {
    border-bottom: 2px solid #EFC319;
    margin-bottom: 20px;
    padding-bottom: 20px;
}
.element-set {
    width: 49.5%;
    display: inline-block;
    vertical-align: top;
    padding: 0;
}

.element-set:nth-of-type(2) {
    padding-left: 10px;
}

.collection_Places .element-set {
    width: auto;
    display: block;
}

.element-set-group .element-set {
    display: block;
    width: auto;
    padding: 0;
}
.element-set-group {
    display:inline-block;
    width: 50%;
    vertical-align: top;

}

.element-set #letters-item-type-metadata-transcription,
.flow-right .element-set #dublin-core-description {
    display: none;
}

.element {
    margin-bottom: 0;
}
.element h3 {
    margin-bottom:4px;
}


#dublin-core-title {
    display: none;
}

#bio {
    width: 49%;
    display: inline-block;
    padding-right: 34px;
    text-align: left;
    line-height: 1.7;
}

#transcription,
#images {
    width: 49%;
    display: inline-block;
    max-height: 500px;;
    overflow:auto;
}

.collection_Letters [id^="open_layers_zoom_map_map"] {
    height: 500px;
}

.collection_Letters [id^="open_layers_zoom_map_map_more"] {
    -display: none;
}

#transcription {
    line-height: 1.7;
    padding: 0 20px 0 0;
}

#switch-pages label {
    margin-left: 10px;
}
#switch-pages .switch-page {
    vertical-align: middle;
}

#simple-pages-breadcrumbs {
    display:none;
}

/* footer */

#footer-wrap {
	background-color: #EFC319;
    border-top: 2px solid rgb(245, 177, 38);
}

#footer-wrap {
	z-index: -1;
	position: relative;
}

#team div { 
	display: inline-block;
	padding: 7px 9px 0;
}

#team div img {
/*	background-color: white; */
}

footer p {
    margin: 5px 0 0;
    float:right;
}

/* plugin overwrites */

/* Neatling*/
body.neatline.show div#neatline-map,body.neatline.fullscreen div#neatline-map {
	width: 100%;
}
body.neatline.show div#neatline-narrative,body.neatline.fullscreen div#neatline-narrative {
	display: none;
}

/*openlayers*/
[id^="open_layers_zoom_map_map"] {
    width: auto;
}
#neatline-map {
    height: 900px;
}




/* mobile views */


.hide-for-large-up {
	display:none;
}

.show-for-large-up {
	display:block;
}
/* ... */

